# python-advanced-assignments

./: README.md
hw_1/: README.md  number_lines.py  tail.py
hw_1/artifacts/: file.txt
hw_1/artifacts/1/: output_nl.txt  output_script.txt
hw_1/artifacts/2/: output_script.txt  output_tail.txt
hw_2/: README.md
hw_2/artifacts/: Dockerfile  final_output.tex  output_step1.tex
hw_3/: README.md  example.py  example_classes.py  example_hash.py  example_mixins.py  matrix.py  pyproject.toml
hw_3/artifacts/: matrix*.txt  matrix@.txt
hw_3/artifacts/3/: A.txt  AB.txt  B.txt  C.txt  CD.txt  hash.txt
hw_3/matrix_calc/: hash.py  mclass.py  mixins.py
hw_4/: README.md  fibonacci.py  integrate.py  processes.py
hw_4/artifacts/: 1.txt  2.txt  3.txt
hw_5/: README.md  img_parser.py  pyproject.toml
