[project]
name = "hw-5"
version = "0.1.0"
description = ""
authors = [
    {name = "Semyon Lukin",email = "lukinsemyon@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio (>=3.4.3,<4.0.0)",
    "aiohttp (>=3.11.16,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
